examples/test/testpolicy12923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12923
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key9: value4
      key42: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value10
          key41: value8
          key40: value34
      podSelector:
        matchLabels:
          key12: value4
